--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hannes blommor</title>
 
+	<link rel="stylesheet" href="/css/shared.css">
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/flowers.css">
 </head>
 
 <body>
@@ -29,7 +31,7 @@
 
 			<div class="species-list">
 				<article class="flower-species">
-					<img src="/media/rose.jpg" alt="Rosa ros">
+					<img src="/media/rose.webp" alt="Rosa ros">
 					<div class="flower-species-info">
 						<h2>Ros</h2>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, commodi.</p>
@@ -37,7 +39,7 @@
 					</div>
 				</article>
 				<article class="flower-species">
-					<img src="/media/rose.jpg" alt="Rosa ros">
+					<img src="/media/rose.webp" alt="Rosa ros">
 					<div class="flower-species-info">
 						<h2>Ros</h2>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, commodi.</p>
@@ -45,7 +47,7 @@
 					</div>
 				</article>
 				<article class="flower-species">
-					<img src="/media/rose.jpg" alt="Rosa ros">
+					<img src="/media/rose.webp" alt="Rosa ros">
 					<div class="flower-species-info">
 						<h2>Ros</h2>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, commodi.</p>
@@ -53,7 +55,7 @@
 					</div>
 				</article>
 				<article class="flower-species">
-					<img src="/media/rose.jpg" alt="Rosa ros">
+					<img src="/media/rose.webp" alt="Rosa ros">
 					<div class="flower-species-info">
 						<h2>Ros</h2>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, commodi.</p>
@@ -61,7 +63,7 @@
 					</div>
 				</article>
 				<article class="flower-species">
-					<img src="/media/rose.jpg" alt="Rosa ros">
+					<img src="/media/rose.webp" alt="Rosa ros">
 					<div class="flower-species-info">
 						<h2>Ros</h2>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, commodi.</p>
@@ -69,7 +71,7 @@
 					</div>
 				</article>
 				<article class="flower-species">
-					<img src="/media/rose.jpg" alt="Rosa ros">
+					<img src="/media/rose.webp" alt="Rosa ros">
 					<div class="flower-species-info">
 						<h2>Ros</h2>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, commodi.</p>
